--- a/Docs/templates/components/note.html
+++ b/Docs/templates/components/note.html
@@ -8,6 +8,9 @@
         <a href="delete/{id}">
             <img src="Docs/img/delete.png"" alt="" class="delete">
         </a>
+        <a href="update/{id}">
+            <img src="Docs/img/update.png"" alt="" class="update">
+        </a>
     </div>
     <div class="card-content">
         <p>
