--- a/Docs/templates/edicao.html
+++ b/Docs/templates/edicao.html
@@ -14,7 +14,7 @@
     href="https://fonts.googleapis.com/css2?family=Roboto&family=Permanent+Marker&display=swap"
     rel="stylesheet"
   />
-  <link rel="stylesheet" href="Docs/Css/getit.css" />
+  <link rel="stylesheet" href="/Docs/Css/getit.css" />
 </head>
 
 <body>
@@ -30,19 +30,19 @@
         class="form-card-title"
         type="text"
         name="titulo"
-        placeholder="Título"
+        value="{title}"
       />
-      <textarea
+      <input
         class="autoresize"
         name="detalhes"
-        placeholder="Digite o conteúdo..."
-      ></textarea>
-      <button class="btn" type="submit">Criar</button>
+        value="{details}"
+      />
+      <div class="row space-between">
+          <button class="btn cancelar" type="submit" name="action" value="cancelar">Cancelar</button>
+          <button class="btn salvar" type="submit" name="action" value="salvar">Salvar</button>
+      </div>
     </form>
-  
-    <ul class="card-container">
-    {notes}
-    </ul>
+
   </main>
 
   <script type="text/javascript" src="/getit.js"></script>
