--- a/Docs/templates/404.html
+++ b/Docs/templates/404.html
@@ -20,11 +20,11 @@
 <body>
 
     <main>
-        <h1>Erro 404 XD</h1>
+        <img src="Docs/img/erro.png" alt="" class="erro">
 
-        <img src="Docs/img/erro.png" alt="">
-
-        <h1>HOMER SIMPSON: ~(8(I))</h1>
+        <form method="post">
+          <button type="submit" class="btn return">Retorne ao início</button>
+        </form>
 
     </main>
 
