--- a/Docs/templates/index.html
+++ b/Docs/templates/index.html
@@ -25,6 +25,7 @@
   </div>
 
   <main class="container">
+    <p class="popup">{popup}</p>
     <form method="post" class="form-card">
       <input
         class="form-card-title"
