--- a/Docs/Css/getit.css
+++ b/Docs/Css/getit.css
@@ -23,17 +23,17 @@ Algumas informações úteis e dicas:
  */
 
 html,
+
 body {
   font-family: "Roboto", sans-serif;
 }
 
-/* Você pode usar o CSS comentado abaixo, se ajudar */
-/* Fonte: https://codepen.io/CrisWoler/pen/ogXBLj */
 main{
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 .appbar{
   background-color: #f7d736;
   box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
@@ -41,15 +41,18 @@ main{
   flex-direction: row;
   align-items: center;
 }
+
 .logo{
   height: 3rem;
   margin-top: 0.5rem;
   margin-bottom: 0.5rem;
   margin-left: 0.5rem;
 }
+
 .subtitle{
   margin-left: 1rem;
 }
+
 .form-card{
   box-shadow: 0 10px 10px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   width: 30%;
@@ -61,10 +64,12 @@ main{
   justify-content: space-evenly;
   border-radius: 2px;
 }
+
 .form-card-title{
   font-size: 1rem;
   border: none;
 }
+
 .autoresize{
   font-family: "Roboto", sans-serif;
   font-size: 0.8rem;
@@ -72,12 +77,14 @@ main{
   border: none;
   resize: none;
 }
+
 .card-container{
   display: flex;
   flex-wrap: wrap;
   margin: 1rem;
   justify-content: space-evenly;
 }
+
 .card{
   box-shadow: 0 10px 10px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
   margin: 1rem;
@@ -87,30 +94,47 @@ main{
   display: flex;
   flex-direction: column;
 }
+
 .delete{
   width: 1.5rem;
   height: 1.5rem;
   margin-top: 0.4rem;
 }
+
 .update{
   width: 1.5rem;
   height: 1.5rem;
   margin-top: 0.4rem;
 }
+
+.erro{
+  width: 40%;
+  height: 40%;
+  margin-top: 3rem;
+}
+
 .row{
   display: flex;
   flex-direction: row;
 }
+
 .card-color-1{
   background-color: #ead3a7;
 }
+
 .card-color-2{
   background-color: #9de0f5;
-}.card-color-3{
+}
+
+.card-color-3{
   background-color: #ef89ba;
-}.card-color-4{
+}
+
+.card-color-4{
   background-color: #fae890;
-}.card-color-5{
+}
+
+.card-color-5{
   background-color: #abe9c1;
 }
 
@@ -174,8 +198,6 @@ main{
   margin-top: auto;
   margin-bottom: auto;
 }
-/* 2c2c2c
-4c4c4cD */
 
 .btn {
   position: relative;
@@ -237,7 +259,21 @@ main{
   width: 14rem;
 }
 
+.return{
+  background-color: rgba(186, 239, 239, 0.626);
+}
+
 .space-between{
   display: flex;
   justify-content: space-between;
+}
+
+.popup{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  margin-top: 1rem;
+  height: 3rem;
+  background-color: rgba(186, 239, 239, 0.626);
+  box-shadow: 0 10px 10px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
